# src/models/User.js
@@ -23,17 +23,6 @@ const userSchema = mongoose.Schema({
         type: Boolean,
         default: false
     },
-    puntuaciones: [
-        {
-            tema: {
-                ref: 'Tema',
-                type: mongoose.Schema.Types.ObjectId
-            },
-            score: {
-                type: Number
-            }
-        }
-    ],
     foto: {
         type: String
     }
